test/files/neg/t3015.check
t3015.scala:7: error: scrutinee is incompatible with pattern type;
 found   : _$1 where type +_$1
 required: String
  val b(foo) = "foo" 
       ^
t3015.scala:7: error: type mismatch;
 found   : String with _$1(in object Test) where type +_$1(in object Test)
 required: (some other)_$1(in object Test) where type +(some other)_$1(in object Test)
  val b(foo) = "foo" 
      ^
two errors found
